--- a/css/base.css
+++ b/css/base.css
@@ -19,7 +19,7 @@ body {
 /* Components
 =========================*/
 .container {
-margin: 10% auto 5%;
+margin: 10% auto;
 }
 .vertical-center {
 display: table-cell;
@@ -42,9 +42,23 @@ font-weight: 400;
 .para {
 margin-top: 2.5%;
 margin-bottom: 2.5%;
-font-size: 1.25em;		/* 20 px / 16 px */
+font-size: 1.25em;/* 20 px / 16 px */
 line-height: 2.25em;	/* 36 px / 16 px */
 color: #6c6c6c;
+}
+footer {  
+pointer-events: none;
+position: fixed;
+bottom: 0;
+width: 100%;
+height: 50%;
+z-index: 3;
+background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 86%, rgba(255,255,255,1) 100%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(86%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,1)));
+background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 86%,rgba(255,255,255,1) 100%);
+background: -o-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 86%,rgba(255,255,255,1) 100%);
+background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 86%,rgba(255,255,255,1) 100%);
+background: linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 86%,rgba(255,255,255,1) 100%);
 }
 
 /* Typography
