--- a/css/base.css
+++ b/css/base.css
@@ -60,6 +60,67 @@ background: -o-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 8
 background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 86%,rgba(255,255,255,1) 100%);
 background: linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 86%,rgba(255,255,255,1) 100%);
 }
+.navigation{
+margin-top: -60px;
+top: 300px;
+position: fixed;
+right: 0;
+display: table;
+}
+.dotstyle ul {
+position: relative;
+display: inline-block;
+margin: 0;
+padding: 0;
+list-style: none;
+cursor: default; 
+-webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
+}
+.dotstyle li {
+position: relative;
+display: block;
+margin: 15px;
+width: 15px;
+height: 15px;
+cursor: pointer;
+}
+.dotstyle li a {
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+outline: none;
+border-radius: 50%;
+background-color: #03a9f4;
+background-color: #03a9f4;
+text-indent: -999em; /* make the text accessible to screen readers */
+cursor: pointer;
+position: absolute;
+}
+
+.dotstyle li a:focus {
+outline: none;
+}
+.dotstyle-fillin li a {
+background-color: transparent;
+box-shadow: inset 0 0 0 2px #03a9f4;
+-webkit-transition: box-shadow 0.3s ease;
+transition: box-shadow 0.3s ease;
+}
+
+.dotstyle-fillin li a:hover,
+.dotstyle-fillin li a:focus {
+box-shadow: inset 0 0 0 2px #2a6496;
+}
+
+.dotstyle-fillin li.current a {
+box-shadow: inset 0 0 0 8px #03a9f4;
+}
 
 /* Typography
 =========================*/
