--- a/css/base.css
+++ b/css/base.css
@@ -48,6 +48,9 @@ font-size: 125%;			/* 20 px / 16 px */
 line-height: 2.25em;	/* 36 px / 16 px */
 color: #6c6c6c;
 }
+.fun {
+text-decoration: line-through;
+}
 footer {  
 pointer-events: none;
 position: fixed;
