--- a/css/entypo.css
+++ b/css/entypo.css
@@ -43,6 +43,6 @@ Created by Debashis Barman exclusively for debashisbarman.in / debashisbarman.gi
 [class*="entypo-paper-plane"]:before {
   font-family: 'entypo', sans-serif;
 }
-[class*="entypo-up-circled"]:before {
+[class*="entypo-back-in-time"]:before {
   font-family: 'entypo', sans-serif;
 }
