--- a/css/base.css
+++ b/css/base.css
@@ -103,11 +103,10 @@ outline: none;
 border-radius: 50%;
 background-color: #03a9f4;
 background-color: #03a9f4;
-text-indent: -999em; /* make the text accessible to screen readers */
+text-indent: -999em;		/* Make the text accessible to screen readers */
 cursor: pointer;
 position: absolute;
 }
-
 .dotstyle li a:focus {
 outline: none;
 }
@@ -117,14 +116,71 @@ box-shadow: inset 0 0 0 2px #03a9f4;
 -webkit-transition: box-shadow 0.3s ease;
 transition: box-shadow 0.3s ease;
 }
-
 .dotstyle-fillin li a:hover,
 .dotstyle-fillin li a:focus {
 box-shadow: inset 0 0 0 2px #2a6496;
 }
-
 .dotstyle-fillin li.current a {
 box-shadow: inset 0 0 0 8px #03a9f4;
+}
+.connect{
+padding: 0 1% 1% 1%;
+bottom: 0;
+right: 0;
+color: #6c6c6c;
+position: fixed;
+border-top: 2px solid #03a9f4;
+box-shadow: rgba(0,0,0,0.1) 1px 2px 2px 2px;
+z-index: 99;
+}
+ul.timeline li {
+position:relative;
+list-style:none;
+padding-left:2.5%;
+color:#6c6c6c;
+font-size:1em;
+margin:0 0 5px;
+margin-bottom: 0;
+}
+ul.timeline li:after {
+/* Bullets */
+-webkit-border-radius:50%;
+-khtml-border-radius:50%;
+-moz-border-radius:50%;
+-ms-border-radius:50%;
+-o-border-radius:50%;
+border-radius:50%;
+position:absolute;
+height:10px;
+width:10px;
+content:"";
+border:2px solid #03a9f4;
+background-color: white;
+left: -20px;		/* Adjust manually */
+top: 40%;
+}
+ul.timeline li:before {
+/* Lines */
+content:"";
+position: absolute;
+left: -16px;	/* Adjust manually */
+border-left: 2px solid #03a9f4;
+height: 100%;
+width: 1px;
+top: 0;
+}
+ul.timeline li:first-child:before {
+/* First li's line */
+top: 50%;	/* Moves the line down so that it disappears under the bullet. Adjust manually */
+}
+ul.timeline li:last-child:before {
+/* Last li's line */
+height: 50%;	/* Shorten the line so it goes only up to the bullet. Is equal to first-child:before's top */
+}
+.year{
+padding-left: 2.5%;
+color: silver;	
+font-weight: bold;
 }
 
 /* Typography
