--- a/css/entypo.css
+++ b/css/entypo.css
@@ -2,6 +2,7 @@
 
 Created by Debashis Barman exclusively for debashisbarman.in / debashisbarman.github.io
 07/29/2014
+Version 1.0.25 (Stable)
 
 */
 
