--- a/css/base.css
+++ b/css/base.css
@@ -179,6 +179,15 @@ padding-left: 1em;
 font-size: .9em;
 color: silver;	
 }
+.location-marker {
+position: absolute;
+right: 29.5%;
+top: 53%;
+font-size: 1.2em;
+color: #6c6c6c;
+cursor: default;
+}
+
 
 /* Typography
 =========================*/
