--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
 <div class="col-lg-8">
 <h2>Contact</h2>
 <p class="para">
-Feel free to hit me up on <a target="_blank" href="http://twitter.com/_DebashisBarman">Twitter</a>, <a target="_blank" href="http://facebook.com/debashisb04">Facebook</a>, <a target="_blank" href="http://plus.google.com/+DebashisBarman/">Google+</a>, <a target="_blank" href="https://debashisbarman.tumblr.com">Tumblr</a>, 
+Feel free to hit me up on <a target="_blank" href="http://github.com/debashisbarman">Github</a>, <a target="_blank" href="http://twitter.com/_DebashisBarman">Twitter</a>, <a target="_blank" href="http://facebook.com/debashisb04">Facebook</a>, <a target="_blank" href="http://plus.google.com/+DebashisBarman/">Google+</a>, <a target="_blank" href="https://debashisbarman.tumblr.com">Tumblr</a>, 
 <a target="_blank" href="http://in.linkedin.com/pub/debashis-barman/66/a26/b67">LinkedIn</a>, <a target="_blank" href="https://medium.com/@Deb_Speaks">Medium</a> or anywhere else you can find me.
 If you want to discuss potential projects or want to learn more about me and my process, do not hesitate to <a target="_blank" href="mailto:debashisb04@gmail.com" >say hello</a>. The best way to contact me is on Twitter.</p>
 <p><a target="_blank" href="https://twitter.com/_DebashisBarman" class="btn btn-default" data-show-count="false" data-show-screen-name="false"><span class="entypo-twitter"></span> Follow</a>
