Updated Site Design

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: article
+comments: true
 ---
 <div class="row">
 	<div class="col-lg-1 col-lg-offset-1"></div>
@@ -19,3 +20,7 @@ layout: article
 </div>
 
 {% include share.html %}
+{% if page.comments %}
+	{% include comments.html %}
+{% endif %}
+{% include google_analytics.html %}
