Updated Site Design

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 	{% include footer.html %}
 
 	</div>
-	{% include google_anlytics.html %}
+	{% include google_analytics.html %}
 	</body>
 
 </html>
