--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-<div>
+<div class="col-lg-1 col-lg-offset-1"></div>
+	
+<div class="col-lg-8">
 
   <header class="post-header">
     <h1>{{ page.title }}</h1>
