Updated Site Design

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,9 +1,7 @@
 <!-- Contact -->
 <hr class="para"/>
 <div class="row">
-<div class="col-lg-1 col-lg-offset-1 text-right">
-
-</div>
+<div class="col-lg-1 col-lg-offset-1"></div>
 <div class="col-lg-8">
 <h2>Contact</h2>
 <p class="para">
