--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,5 @@
-<!-- Footer -->
-<hr class="para"/>
-<div class="row">
-	<div class="col-lg-1 col-lg-offset-1 text-right"></div>
-	<div class="col-lg-8">
-		<p><span class="glyphicon glyphicon-copyright-mark"></span> 2014 Debashis Barman. All rights reserved. Powered by <a target="_blank" href="http://github.com" >Github</a>.</p>
-	</div>
-</div>
+<footer>
+
+<p>&copy; {{ site.time | date: '%Y' }} Deashis Barman. All rights reserved.</p>
+
+</footer>
