--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,11 +1,3 @@
-<!-- Share -->
-<div class="row">
-	<div class="col-lg-1 col-lg-offset-1 text-right"></div>
-	<div class="col-lg-8">
-		<p>Did you enjoy this post? If so, share it! <a href="https://twitter.com/share" class="btn btn-default" data-text="Finishing" data-via="orderedlist" data-count="none"><span class="entypo-twitter"></span> Tweet</a></p>
-
-  		<p>Have comments on this post or want to discuss further? Hit me up on Twitter and let me know your thoughts. <a target="_blank" href="https://twitter.com/_DebashisBarman" class="btn btn-default" data-show-count="false" data-show-screen-name="false"><span class="entypo-twitter"></span> Follow</a>
-		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
-	</div>
-</div>
+<p>Did you enjoy this post? If so, <a href="https://twitter.com/share" data-text="Finishing" data-via="orderedlist" data-count="none"><span class="entypo-twitter"></span>share</a> it!</p>
+<p>Have comments on this post or want to discuss further? Hit me up on <a target="_blank" href="https://twitter.com/_DebashisBarman" data-show-count="false" data-show-screen-name="false">Twitter</a> and let me know your thoughts.
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
