--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html>
 
-	{% include head.html %}
+{% include head.html %}
 
-	<body>
-	<div class="container">
-	{% include header.html %}
+<body>
 
-	<div class="row">
-      	{{ content }}
-	</div>
+<div>
 
-	{% include contact.html %}
-	{% include footer.html %}
+{{ content }}
 
-	</div>
-	{% include google_analytics.html %}
-	</body>
+</div>
 
+{% include google_analytics.html %}
+
+</body>
 </html>
