--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,16 +1,31 @@
 ---
 layout: default
 ---
-<div class="col-lg-1 col-lg-offset-1"></div>
-	
-<div class="col-lg-8">
 
-  <header class="post-header">
-    <h1>{{ page.title }}</h1>
-  </header>
+<div class="article-head">
+<h1><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></h1>
+</div>
+<div class="article-body">
+{{ content }}
+</div>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
+<div class="index">
+<h1>Index</h1>
+<ul>
+{% for post in site.posts %}
+<li><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
+{% endfor %}
+</ul>
+</div>
 
+<div class="links">
+{% include references.html %}
+</div>
+
+<div class="menu">
+{% include about.html %}
+</div>
+
+<div class="disclaimer">
+{% include disclaimer.html %}
 </div>
