--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,8 @@
 
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 <meta name="description" content="{{ site.description }}">
-<meta name="keywords" content="Freelance Web Designer, Debashis Barman, Responsive Web Design, Minimal Web Design"/>
+<meta name="keywords" content="Debashis Barman, computer science, btech, college student, jekyll site, github pages"/>
 
 <link rel="stylesheet" href="{{ "/css/base3.0.0.min.css" | prepend: site.baseurl }}"/>
-<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"/>
 </head>
