--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,7 @@
 <h1>More</h1>
 <ul>
 <li><a href="{{ site.url }}" >Home</a></li>
+<li><a target="_blank" href="https://gist.github.com/debashisbarman" >My Gists</a></li>
 <li><a href="{{ "/about/" | prepend: site.url }}" >About the site</a></li>
 <li>Keep track via <a href="{{ "/feed.xml" | prepend: site.url }}" >RSS</a> or <a target="_blank" href="https://twitter.com/_DebashisBarman" data-show-count="false" data-show-screen-name="false">Twitter</a></li>
 </ul>
