--- a/_includes/other.html
+++ b/_includes/other.html
@@ -1,8 +1,9 @@
-<h1>More</h1>
+<h1>Other Pages</h1>
 <ul>
 <li><a href="{{ site.url }}" >Home</a></li>
 <li><a target="_blank" href="https://gist.github.com/debashisbarman" >My Gists</a></li>
 <li><a href="{{ "/about/" | prepend: site.url }}" >About the site</a></li>
+<li><a href="{{ "/assets/DebashisBarmanCurriculumVitae.pdf" | prepend: site.url }}" >Download CV</a></li>
 <li>Keep track via <a href="{{ "/feed.xml" | prepend: site.url }}" >RSS</a> or <a target="_blank" href="https://twitter.com/_DebashisBarman" data-show-count="false" data-show-screen-name="false">Twitter</a></li>
 </ul>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
