--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -23,7 +23,7 @@ layout: default
 </div>
 
 <div class="menu">
-{% include about.html %}
+{% include other.html %}
 </div>
 
 <div class="disclaimer">
