--- a/_includes/welcome.html
+++ b/_includes/welcome.html
@@ -1,6 +1,6 @@
 <h1><a href="{{ site.url }}" title="Home">{{ site.title }}</a></h1>
 <p><blockquote>Simplicity is the ultimate sophistication.</blockquote></p>
 <p>Hello, world! I'm a 21 year old college guy who is currently doing B.Tech in Computer Science.</p>
-<p>I enjoy computer programming, writing CSS and doing projects, specially on web and operating system. Some of my works are available on <a href="http://www.behance.net/debashisbarman/">Behance</a>.</p>
-<p>You can find me on <a href="https://www.github.com/debashisbarman/">Github</a>. Contact me at <a href="mailto:{{ site.email }}">{{ site.email }}</a>.</p>
-<p>I love minimalism and I also write blogs.</p>
+<p>I enjoy computer programming, writing CSS and doing projects, specially on web and operating system. Some of my works are available on <a target="_blank" href="http://www.behance.net/debashisbarman/">Behance</a>.</p>
+<p>You can find me on <a target="_blank" href="https://www.github.com/debashisbarman/">Github</a>. Contact me at <a href="mailto:{{ site.email }}">{{ site.email }}</a>.</p>
+<p>I love minimalism and occasionally write blogs.</p>
