--- a/_includes/welcome.html
+++ b/_includes/welcome.html
@@ -3,4 +3,4 @@
 <p>Hello, world! I'm a 21 year old college guy who is currently doing B.Tech in Computer Science.</p>
 <p>I enjoy computer programming, writing CSS and doing projects, specially on web and operating system. Some of my works are available on <a target="_blank" href="http://www.behance.net/debashisbarman/">Behance</a>.</p>
 <p>You can find me on <a target="_blank" href="https://www.github.com/debashisbarman/">Github</a>. Contact me at <a href="mailto:{{ site.email }}">{{ site.email }}</a>.</p>
-<p>I love minimalism and occasionally write blogs.</p>
+<p>I love minimalism and occasionally blog here.</p>
