--- a/_includes/other.html
+++ b/_includes/other.html
@@ -3,7 +3,7 @@
 <li><a href="{{ site.url }}" >Home</a></li>
 <li><a target="_blank" href="https://gist.github.com/debashisbarman" >My Gists</a></li>
 <li><a href="{{ "/about/" | prepend: site.url }}" >About the site</a></li>
-<li>More about me (<a href="{{ "/assets/DebashisBarmanCurriculumVitae.pdf" | prepend: site.url }}" >download CV</a>)</li>
+<li><a href="{{ "/assets/DebashisBarmanCurriculumVitae.pdf" | prepend: site.url }}" >More about me (CV)</a></li>
 <li>Keep track via <a href="{{ "/feed.xml" | prepend: site.url }}" >RSS</a> or <a target="_blank" href="https://twitter.com/_DebashisBarman" data-show-count="false" data-show-screen-name="false">Twitter</a></li>
 </ul>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
