--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
 
-<p>&copy; {{ site.time | date: '%Y' }} Deashis Barman. All rights reserved.</p>
+<p>&copy; {{ site.time | date: '%Y' }} Debashis Barman. All rights reserved.</p>
 
 </footer>
