--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
 </div>
 
 <div class="related-post">
-<h2>Related Posts</h2>
+<h2>Related Articles</h2>
 <ul>
 {% for post in site.related_posts limit:3 %}
 <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
