--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
+<br/>
 <footer>
-
-<p>&copy; {{ site.time | date: '%Y' }} Debashis Barman. All rights reserved.</p>
-
+<small>&copy; {{ site.time | date: '%Y' }} Debashis Barman. All rights reserved.</small>
 </footer>
