--- a/_includes/welcome.html
+++ b/_includes/welcome.html
@@ -1,6 +1,11 @@
+<small><i>Welcome to Homepage of</i></small>
 <h1><a href="{{ site.url }}" title="Home">{{ site.title }}</a></h1>
-<p><blockquote>Simplicity is the ultimate sophistication.</blockquote></p>
-<p>Hello, world! I'm a 21 year old college guy who is currently doing B.Tech in Computer Science.</p>
+<figure style="float:right;">
+<img src="images/profile.jpg" alt="Debashis Barman" style="width:240px;border:2px solid black;" />
+<figcaption><small>(Photo by <a href="http://trishnabarman.github.io" target="_blank">Trishna Barman</a>)</small></figcaption>
+</figure>
+<h2><small>B.Tech Student in <a href="http://dbuniversity.ac.in/CSE-&-IT.php" target="_blank">Computer Science</a>, <abbr><a href="http://dbuniversity.ac.in/school_of_et.php" target="_blank">DBCET</a></abbr></small></h2><br/>
+<p>Hello, world! I'm a 21 year old college guy who is currently doing B.Tech in Computer Science and Engineering.</p>
 <p>I enjoy computer programming, writing CSS and doing projects, specially on web and operating system. Some of my works are available on <a target="_blank" href="http://www.behance.net/debashisbarman/">Behance</a>.</p>
 <p>You can find me on <a target="_blank" href="https://www.github.com/debashisbarman/">Github</a>. Contact me at <a href="mailto:{{ site.email }}">{{ site.email }}</a>.</p>
 <p>I love minimalism and occasionally blog here.</p>
