--- a/_includes/welcome.html
+++ b/_includes/welcome.html
@@ -8,6 +8,7 @@
 </figure>
 -->
 <!--<h2><small>B.Tech Student in <a href="http://dbuniversity.ac.in/CSE-&-IT.php" target="_blank">Computer Science</a>, <abbr><a href="http://dbuniversity.ac.in/school_of_et.php" target="_blank">DBCET</a></abbr></small></h2><br/>-->
+<blockqoute>Simplicity is the ultimate sophistication.</blockqoute>
 <p>Hello, world! I'm a 21 year old college guy who is currently doing B.Tech in Computer Science and Engineering.</p>
 <p>I enjoy computer programming, writing CSS and doing projects, specially on web and <a target="_blank" href="https://github.com/debashisbarman/Mini-OS/">operating system</a>. Some of my works are available on <a target="_blank" href="http://www.behance.net/debashisbarman/">Behance</a>.</p>
 <p>You can find me on <a target="_blank" href="https://www.github.com/debashisbarman/">Github</a>. Contact me at <a href="mailto:{{ site.email }}">{{ site.email }}</a>.</p>
