--- a/_includes/references.html
+++ b/_includes/references.html
@@ -6,4 +6,5 @@
 <li><a target="_blank" href="https://plus.google.com/+DebashisBarman">+DebashisBarman</a></li>
 <li><a target="_blank" href="https://www.facebook.com/debashisb04" >Facebook</a></li>
 <li><a target="_blank" href="http://in.linkedin.com/pub/debashis-barman/66/a26/b67" >LinkedIn</a></li>
+<li><a target="_blank" href="https://dbuniversity.academia.edu/DebashisBarman" >Academia</a></li>
 </ul>
