--- a/_includes/disclaimer.html
+++ b/_includes/disclaimer.html
@@ -1,2 +1,2 @@
 <br/>
-<small>This site is built on <a target="_blank" href="http://jekyllrb.com/">Jekyll</a> and hosted on <a target="_blank" href="http://pages.github.com/">Github Pages</a>.</small>
+<p>This site is built on <a target="_blank" href="http://jekyllrb.com/">Jekyll</a> and hosted on <a target="_blank" href="http://pages.github.com/">Github Pages</a>.</p>
