--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <br/>
 <footer>
-<small>&copy; {{ site.time | date: '%Y' }} Debashis Barman. All rights reserved.</small>
+<p>&copy; {{ site.time | date: '%Y' }} Debashis Barman. All rights reserved.</p>
 </footer>
