--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,9 +5,9 @@ layout: default
 <div class="article-head">
 <h1><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></h1>
 </div>
-<!--<div class="article-body">
+<div class="article-body">
 {{ content }}
-</div>-->
+</div>
 
 <div class="index">
 <h2>Index</h2>
