--- a/css/base3.0.0.css
+++ b/css/base3.0.0.css
@@ -8,7 +8,7 @@
 
 /* Body
 =========================*/
-body {
+body 	{
 	width:35em;
 	margin:120px 0 120px 120px;
 	font:15px/1.6em Circular,Georgia,serif;
@@ -16,7 +16,7 @@ body {
 
 /* Typography
 =========================*/
-h1 {
+h1 	{
 	font-size:1em; 
 	font-weight:bold;
 	}
@@ -46,7 +46,7 @@ a 	{
 	
 /* Images
 =========================*/
-img {
+img 	{
 	width: 100%; 
 	}
 
@@ -72,14 +72,14 @@ blockquote	{
 code, pre {
 	font-family: Menlo, Monaco, "Courier New", monospace;
 }
-code {
+code 	{
 	padding: .25em .5em;
 	font-size: 85%;
 	color: #000;
 	background-color: #fff;
 	border-radius: 3px;
 }
-pre {
+pre 	{
 	display: block;
 	margin-top: 0;
 	margin-bottom: 1rem;
@@ -100,7 +100,7 @@ pre code {
 }
 	
 /* Components
-=========================*/
+=========================*
 .about-me,
 .index, 
 .article-head, 
@@ -120,7 +120,7 @@ pre code {
 /* Media queries
 =========================*/
 @media (max-width: 650px) {
-body {
+body 	{
 	width:75%;
 	margin:0 0 15% 15%;
 	padding-top: 5%;
@@ -143,7 +143,7 @@ h1, h2 {
 }
 
 @media (max-width: 480px) {
-body {
+body 	{
 	width:80%; 
 	margin:0 0 10% 10%;
 	padding-top: 5%; 
@@ -153,7 +153,7 @@ body {
 h1, h2 {
 	margin-top:auto; 
 	}
-code {
+code 	{
 	font-size: 14px;	
 	}
 .about-me,
