--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="Freelance Web Designer, Debashis Barman, Responsive Web Design, Minimal Web Design"/>
 
 <!-- Temporarily No CSS -->
-<link rel="stylesheet" href="{{ "/css/base3.0.0.min.css" | prepend: site.baseurl }}"/>
+<link rel="stylesheet" href="{{ "/css/base3.0.0.css" | prepend: site.baseurl }}"/>
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 <link href="{{ "/images/favicon.ico" | prepend: site.baseurl }}" rel="shortcut icon" type="image/x-icon">
 </head>
