--- a/css/base3.0.0.css
+++ b/css/base3.0.0.css
@@ -10,29 +10,25 @@
 =========================*/
 body 	{
 	width:35em;
-	margin:0px 0 120px 120px;
+	margin:120px 0 120px 120px;
 	font:15px/1.6em Circular,Georgia,serif;
 	}
 
 /* Typography
 =========================*/
 h1 	{
-	margin-top: 120px;
 	font-size:1em; 
 	font-weight:bold;
 	}
 h2	{
-	margin-top: 120px;
 	font-size:1em;
 	font-weight:bold;
 	}
 h3 	{
-	margin-top: 120px;
 	font-size:1em;
 	font-weight:bold;
 	}
 h4	{
-	margin-top: 120px;
 	font-size:1em;
 	font-weight:bold;
 	}
@@ -104,7 +100,7 @@ pre code {
 }
 	
 /* Components
-=========================*
+=========================*/
 .about-me,
 .index, 
 .article-head, 
