--- a/css/base3.0.0.css
+++ b/css/base3.0.0.css
@@ -101,16 +101,9 @@ pre code {
 	
 /* Components
 =========================*/
-.about-me,
-.index, 
+.block
 .article-head, 
-.article-body, 
-.related-post, 
-.footer, 
-.links, 
-.menu, 
-.share
-.disclaimer {
+.article-body {
 	margin:0 0 120px 0;	
 	}
 .article-head {
@@ -128,16 +121,9 @@ body 	{
 h1, h2 {
 	margin-top:auto; 
 	}
-.about-me,
-.index, 
+.block
 .article-head, 
-.article-body, 
-.related-post, 
-.footer, 
-.links, 
-.menu, 
-.share
-.disclaimer {
+.article-body {
 	margin:5% 0 15% 0;	
 	}
 }
@@ -156,16 +142,9 @@ h1, h2 {
 code 	{
 	font-size: 14px;	
 	}
-.about-me,
-.index, 
+.block 
 .article-head, 
-.article-body, 
-.related-post, 
-.footer, 
-.links, 
-.menu, 
-.share
-.disclaimer {
+.article-body {
 	margin-top:auto;	
 	}
 }
