--- a/css/base3.0.0.css
+++ b/css/base3.0.0.css
@@ -18,8 +18,8 @@ a.no-border	{ border-bottom: 0; }
 a.marklet	{ border:1px solid; padding:0 3px 0 3px; } 
 .wp-caption-text{ font-style:italic; }
 
-ul, ol 		{ margin:0 0 1.4em 0; padding:0; }
-ul		{ margin:0 0 1.4em 15px;}
+ul, ol 		{ margin:0; padding:0; }
+ul		{ margin:0;}
 
 ul li 		{ list-style:none; margin:0 }
 ol li 		{ list-style:none; margin:0; list-style-position:inside; }
