--- a/css/base3.0.0.css
+++ b/css/base3.0.0.css
@@ -6,51 +6,80 @@
  * 
  */
 
+/* Body
+=========================*/
+body {
+	width:35em;
+	margin:120px 0 120px 120px;
+	font:15px/1.6em Circular,Georgia,serif;
+	}
 
-body 		{ width:35em; margin:0 0 120px 120px; font:15px/1.6em Circular,Georgia,serif; }
-h1 		{ margin:120px 0 1.4em 0; font-size:1em; font-weight:bold; }
-h2		{ margin:120px 0 1.4em 0; font-size:1em; font-weight:bold; }
-h3 		{ margin:120px 0 1.4em 0; font-size:1em; font-weight:bold; }
-h4 		{ margin:120px 0 1.4em 0; font-size:1em; font-weight:bold; }
-p 		{ margin:0 0 1.4em 0 }
-a 		{ color:#000; border-bottom:1px solid #000; text-decoration:none; }
-a.no-border	{ border-bottom: 0; }
-a.marklet	{ border:1px solid; padding:0 3px 0 3px; } 
-.wp-caption-text{ font-style:italic; }
+/* Typography
+=========================*/
+h1 {
+	font-size:1em; 
+	font-weight:bold;
+	}
+h2	{
+	font-size:1em;
+	font-weight:bold;
+	}
+h3 {
+	font-size:1em;
+	font-weight:bold;
+	}
+h4	{
+	font-size:1em;
+	font-weight:bold;
+	}
+p 	{
+	margin:0 0 1.4em 0
+	}
+	
+/* Links
+=========================*/
+a 	{
+	color:#000; 
+	border-bottom:1px solid #000; 
+	text-decoration:none; 
+	}
+	
+/* Images
+=========================*/
+img {
+	width: 100%; 
+	}
 
-ul, ol 		{ margin:0; padding:0; }
-ul		{ margin:0;}
+/* List
+=========================*/
+ul	{
+	padding: 0;
+	}
+ul li {
+	list-style:none; 
+	margin:0 
+	}
 
-ul li 		{ list-style:none; margin:0 }
-ol li 		{ list-style:none; margin:0; list-style-position:inside; }
-
-ul.l, ul.f 	{ margin-left:0; }
-ul.l li, ul.f li 	{ list-style:none; margin:0; padding:0 }
-
-blockquote	{ margin:0; font-style:italic; }
-
-@media (max-width: 650px) {
-body                      { width:75%; margin:0 0 15% 15% }
-h1, h2                    { margin-top:15% }
-}
-
-@media (max-width: 480px) {
-body                      { width:80%; margin:0 0 10% 10%; font-size:14px; line-height:1.7em }
-h1, h2                    { margin-top:10% }
-}
-
-
+/* Blockquote
+=========================*/
+blockquote	{
+	margin:0; 
+	font-style:italic; 
+	}
+	
+/* Code
+=========================*/
 code, pre {
 	font-family: Menlo, Monaco, "Courier New", monospace;
 }
-code 	{
+code {
 	padding: .25em .5em;
 	font-size: 85%;
 	color: #000;
 	background-color: #fff;
 	border-radius: 3px;
 }
-pre 	{
+pre {
 	display: block;
 	margin-top: 0;
 	margin-bottom: 1rem;
@@ -68,4 +97,75 @@ pre code {
 	font-size: 100%;
 	color: inherit;
 	background-color: transparent;
+}
+	
+/* Components
+=========================*/
+.about-me,
+.index, 
+.article-head, 
+.article-body, 
+.related-post, 
+.footer, 
+.links, 
+.menu, 
+.share
+.disclaimer {
+	margin:0 0 120px 0;	
+	}
+.article-head {
+	margin: 0 0 50px 0;	
+	}
+	
+/* Media queries
+=========================*/
+@media (max-width: 650px) {
+body {
+	width:75%;
+	margin:0 0 15% 15%;
+	padding-top: 5%;
+	}
+h1, h2 {
+	margin-top:auto; 
+	}
+.about-me,
+.index, 
+.article-head, 
+.article-body, 
+.related-post, 
+.footer, 
+.links, 
+.menu, 
+.share
+.disclaimer {
+	margin:5% 0 15% 0;	
+	}
+}
+
+@media (max-width: 480px) {
+body {
+	width:80%; 
+	margin:0 0 10% 10%;
+	padding-top: 5%; 
+	font-size:14px; 
+	line-height:1.7em 
+	}
+h1, h2 {
+	margin-top:auto; 
+	}
+code {
+	font-size: 14px;	
+	}
+.about-me,
+.index, 
+.article-head, 
+.article-body, 
+.related-post, 
+.footer, 
+.links, 
+.menu, 
+.share
+.disclaimer {
+	margin-top:auto;	
+	}
 }
