--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,7 @@ layout: default
 {{ content }}
 </div>
 
-<div class="index">
+<div class="block">
 <h2>Index</h2>
 <ul>
 {% for post in site.posts %}
@@ -18,14 +18,14 @@ layout: default
 </ul>
 </div>
 
-<div class="links">
+<div class="block">
 {% include references.html %}
 </div>
 
-<div class="menu">
+<div class="block">
 {% include other.html %}
 </div>
 
-<div class="disclaimer">
+<div class="block">
 {% include disclaimer.html %}
 </div>
