--- a/_includes/welcome.html
+++ b/_includes/welcome.html
@@ -10,6 +10,6 @@
 <p>I love minimalism and occasionally blog here.</p>
 
 
-<p><img src="images/profile.jpg" alt="Debashis Barman" style="width:100%;" />
-(Photo by <a href="http://trishnabarman.github.io" target="_blank">Trishna Barman</a>)</p>
+<p><img src="images/profile.jpg" alt="Debashis Barman" /></p>
+<p>(Photo by <a href="http://trishnabarman.github.io" target="_blank">Trishna Barman</a>)</p>
 
