--- a/css/base3.0.0.css
+++ b/css/base3.0.0.css
@@ -1,6 +1,6 @@
 /*
  * Created by Debashis Barman exclusively for debashisbarman.in / debashisbarman.github.io.
- * Inspired by 'dogma' (http://maartenpkappert.nl/dogma/). 
+ * Inspired by 'dogma' (http://understandingminimalism.com/dogma/). 
  * 11/22/2014
  * Version 3.0.0 (Stable)
  * 
