--- a/_includes/welcome.html
+++ b/_includes/welcome.html
@@ -6,7 +6,7 @@
 <p>You can find me on <a target="_blank" href="https://www.github.com/debashisbarman/">Github</a>. Contact me at <a href="mailto:{{ site.email }}">{{ site.email }}</a>.</p>
 <p>I love minimalism and occasionally blog here.</p>
 
-<!--
-<p><img src="images/profile.jpg" alt="Debashis Barman" /></p>
-<p>(Photo by <a href="http://trishnabarman.github.io" target="_blank">Trishna Barman</a>)</p>
+
+<p><img src="images/bg.jpg" alt="Debashis Barman" /></p>
+<!--<p>(Photo by <a href="http://trishnabarman.github.io" target="_blank">Trishna Barman</a>)</p>
 -->
