--- a/_includes/references.html
+++ b/_includes/references.html
@@ -7,4 +7,5 @@
 <li><a target="_blank" href="https://www.facebook.com/debashisb04" >Facebook</a></li>
 <li><a target="_blank" href="http://in.linkedin.com/pub/debashis-barman/66/a26/b67" >LinkedIn</a></li>
 <li><a target="_blank" href="https://dbuniversity.academia.edu/DebashisBarman" >Academia</a></li>
+<li><a target="_blank" href="https://www.skillpages.com/debashis.barman/1">Skillpages</a></li>
 </ul>
