--- a/_includes/disclaimer.html
+++ b/_includes/disclaimer.html
@@ -1,2 +1,3 @@
-<br/>
-<p>This site is built on <a target="_blank" href="http://jekyllrb.com/">Jekyll</a> and hosted on <a target="_blank" href="http://pages.github.com/">Github Pages</a>.</p>
+<footer>
+<p><small><strong>Copyright</strong> &copy; {{ site.time | date: '%Y' }} <a class="credit" href="{{ site.url }}">Debashis Barman</a>. All rights reserved.</small></p>
+</footer>
