--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,10 +4,16 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+
 <meta name="description" content="{{ site.description }}">
 <meta name="keywords" content="Freelance Web Designer, Debashis Barman, Responsive Web Design, Minimal Web Design"/>
 
-<link rel="stylesheet" href="{{ "/css/base3.0.0.css" | prepend: site.baseurl }}"/>
+<!-- Kathamo (Grid only) -->
+<link rel="stylesheet" href="{{ "/assets/kathamo/grid.css" | prepend: site.baseurl }}"/>
+
+<!-- Custom Stylesheet -->
+<link rel="stylesheet" href="{{ "/assets/scholar/base.css" | prepend: site.baseurl }}"/>
+
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-<link href="{{ "/images/favicon.ico" | prepend: site.baseurl }}" rel="shortcut icon" type="image/x-icon">
+<link href="{{ "/assets/images/favicon.ico" | prepend: site.baseurl }}" rel="shortcut icon" type="image/x-icon">
 </head>
