--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,11 +1,11 @@
 <h2>Projects</h2>
 <ul>
 <li>
-<h3><a href="https://github.com/debashisbarman/Mini-OS/">Mini Operating System</a></h3>
+<strong><a href="https://github.com/debashisbarman/Mini-OS/">Mini Operating System</a></strong>
 <p>Mini OS is a Bare Bone Operating System written in C and Assembly which could be loaded with the GRUB bootloader on an x86 system. The purpose of this project is to make something stable and simple.</p>
 </li>
 <li>
-<h3><a href="https://github.com/debashisbarman/Kathamo">Kathamo</a></h3>
+<strong><a href="https://github.com/debashisbarman/Kathamo">Kathamo</a></strong>
 <p>Kathamo is a minimalist CSS framework that can help you rapidly develop sites that look beautiful at any size, be it a 17" laptop screen or an iPhone.</p>
 </li>
 </ul>
