--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,30 +2,30 @@
 layout: default
 ---
 
-<div class="article-head">
-<h1><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></h1>
+<header class="masthead">
+<div class="masthead-inner-wrapper">
+<div class="masthead-inner">
+
+{% include sidebar.html %}
+
 </div>
-<div class="article-body">
+</div>
+</header>
+
+<div class="content container clearfix">
+<div class="row">
+<div class="col-lg-12 col-md-12 col-sm-12">
+
+<h2 class="title"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></h2>
+
 {{ content }}
-</div>
 
-<div class="block">
-<h2>Index</h2>
-<ul>
-{% for post in site.posts %}
-<li><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
-{% endfor %}
-</ul>
-</div>
-
-<div class="block">
+<br id="references">
 {% include references.html %}
-</div>
 
-<div class="block">
-{% include other.html %}
-</div>
+<br id="other-pages">
+{% include other-pages.html %}
 
-<div class="block">
-{% include disclaimer.html %}
+</div>
+</div>
 </div>
