--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,33 +2,45 @@
 layout: default
 ---
 
-<div class="article-head">
-<h1><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></h1>
-<span>{{ page.date | date_to_string }}</span>
+<header class="masthead">
+<div class="masthead-inner-wrapper">
+<div class="masthead-inner">
+
+{% include sidebar.html %}
+
 </div>
-<div class="article-body">
+</div>
+</header>
+
+<div class="content container clearfix">
+<div class="row">
+<div class="col-lg-12 col-md-12 col-sm-12">
+
+<h2 class="title"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></h2>
+<p class="lead"><em>{{ page.date | date_to_string }}</em></p>
+
 {{ content }}
-</div>
 
+<br id="comment-and-share">
+{% include comment-and-share.html %}
 
-<br/>
-<div class="block">
-{% include share.html %}
-</div>
-
-<div class="block">
+<br id="related-articles">
 <h2>Related Articles</h2>
 <ul>
 {% for post in site.related_posts limit:3 %}
 <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
 </ul>
-</div>
 
-<div class="block">
-{% include other.html %}
-</div>
+<br id="references">
+{% include references.html %}
 
-<div class="block">
-{% include footer.html %}
+<br id="other-pages">
+{% include other-pages.html %}
+
+<br id="disclaimer">
+{% include disclaimer.html %}
+
+</div>
+</div>
 </div>
