--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
 <li><a target="_blank" href="http://www.behance.net/debashisbarman/">Works & Portfolio</a></li>
 <li><a href="{{ "/#references" | prepend: site.baseurl }}">References</a></li>
 <li><a href="{{ "/#other-pages" | prepend: site.baseurl }}">Other Pages</a></li>
-<li><small>Keep track via <a class="credit" href="http://www.debashisbarman.in/feed.xml">RSS</a> or <a class="credit" target="_blank" href="https://twitter.com/_DebashisBarman" data-show-count="false" data-show-screen-name="false">Twitter</a></small></li>
+<li><small>Keep track via <a class="credit" href="http://www.debashisbarman.in/feed.xml">RSS</a> or <a class="credit" target="_blank" href="https://twitter.com/iDebashisBarman" data-show-count="false" data-show-screen-name="false">Twitter</a></small></li>
 
 <script src="//www.google-analytics.com/analytics.js" async=""></script><script src="http://platform.twitter.com/widgets.js" id="twitter-wjs"></script><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
