--- a/_includes/references.html
+++ b/_includes/references.html
@@ -1,7 +1,7 @@
 <h2>References</h2>
 <ul>
 <li><a target="_blank" href="http://debashisbarman.tumblr.com">Tumblr</a></li>
-<li><a target="_blank" href="https://medium.com/@Deb_Speaks">Blog on Medium</a></li>
+<li><a target="_blank" href="https://medium.com/@iDeb">Blog on Medium</a></li>
 <li><a target="_blank" href="https://debashisbarman.wordpress.com">Blog on Wordpress</a></li>
 <li><a target="_blank" href="https://plus.google.com/+DebashisBarman">+DebashisBarman</a></li>
 <li><a target="_blank" href="https://www.facebook.com/debashisb04">Facebook</a></li>
