--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,11 +1,113 @@
-<h2>Projects</h2>
-<ul>
-<li>
-<strong><a href="https://github.com/debashisbarman/Mini-OS/">Mini Operating System</a></strong>
-<p>Mini OS is a Bare Bone Operating System written in C and Assembly which could be loaded with the GRUB bootloader on an x86 system. The purpose of this project is to make something stable and simple.</p>
-</li>
-<li>
-<strong><a href="https://github.com/debashisbarman/Kathamo">Kathamo</a></strong>
-<p>Kathamo is a minimalist CSS framework that can help you rapidly develop sites that look beautiful at any size, be it a 17" laptop screen or an iPhone.</p>
-</li>
-</ul>
+<!-- Projects Start -->
+<section class="clearfix">
+<div class="container clearfix">
+<div class="row">
+
+<div class="col-sm-12 visible-sm">
+<h2><span class="fa fa-cog"></span> Projects</h2>
+</div>
+
+
+<div class="section clearfix">
+<div class="col-lg-4 col-md-4 col-sm-12 text-right">
+<p><a href="">Mini Operating System</a></p>
+</div>
+<div class="col-lg-6 col-md-8 col-sm-12">
+<p>Bare Bone Operating System written in C and Assembly</p>
+</div>
+</div>
+
+<div class="section clearfix">
+<div class="col-lg-4 col-md-4 col-sm-12 text-right">
+<p><a href="">Random Security Code Generator</a></p>
+</div>
+<div class="col-lg-8 col-md-8 col-sm-12">
+<p>Document verification system as a part of Digital India project</p>
+</div>
+</div>
+
+<div class="section clearfix">
+<div class="col-lg-4 col-md-4 col-sm-12 text-right">
+<p><a href="">Kathamo 2.0.0</a></p>
+</div>
+<div class="col-lg-8 col-md-8 col-sm-12">
+<p>Kathamo is a minimalist mobile friendly CSS framework</p>
+</div>
+</div>
+
+<div class="section clearfix">
+<div class="col-lg-4 col-md-4 col-sm-12 text-right">
+<p><a href="">Knowlege Exchange Network</a></p>
+</div>
+<div class="col-lg-8 col-md-8 col-sm-12">
+<p>Official website for Knowledge Exchange Network</p>
+</div>
+</div>
+
+<div class="section clearfix">
+<div class="col-lg-4 col-md-4 col-sm-12 text-right">
+<p><a href="">PhD. Activity Management System</a></p>
+</div>
+<div class="col-lg-8 col-md-8 col-sm-12">
+<p>Software for Director of Research, Assam Don Bosco University</p>
+</div>
+</div>
+
+<div class="section clearfix">
+<div class="col-lg-4 col-md-4 col-sm-12 text-right">
+<p><a href="">Smart ADBU</a></p>
+</div>
+<div class="col-lg-8 col-md-8 col-sm-12">
+<p>Official android app for Assam Don Bosco University</p>
+</div>
+</div>
+
+<div class="section clearfix">
+<div class="col-lg-4 col-md-4 col-sm-12 text-right">
+<p><a href="">North Kamrup College</a></p>
+</div>
+<div class="col-lg-8 col-md-8 col-sm-12">
+<p>Official website for North Kamrup College</p>
+</div>
+</div>
+
+<div class="section clearfix">
+<div class="col-lg-4 col-md-4 col-sm-12 text-right">
+<p><a href="">Surajit Barman</a></p>
+</div>
+<div class="col-lg-8 col-md-8 col-sm-12">
+<p>Official website for Dr. Surajit Barman</p>
+</div>
+</div>
+
+<div class="section clearfix">
+<div class="col-lg-4 col-md-4 col-sm-12 text-right">
+<p><a href="">Indeva.in</a></p>
+</div>
+<div class="col-lg-8 col-md-8 col-sm-12">
+<p>Official website of Initiative for Development Activities in India</p>
+</div>
+</div>
+
+<div class="section clearfix">
+<div class="col-lg-4 col-md-4 col-sm-12 text-right">
+<p><a href="">Sherlock Holmes</a></p>
+</div>
+<div class="col-lg-8 col-md-8 col-sm-12">
+<p>Conceptual design for Sherlock Holmes about page</p>
+</div>
+</div>
+
+<div class="section clearfix">
+<div class="col-lg-4 col-md-4 col-sm-12 text-right">
+<p><a href="">North Kamrup College</a></p>
+</div>
+<div class="col-lg-8 col-md-8 col-sm-12">
+<p>Official website for North Kamrup College</p>
+</div>
+</div>
+
+</div>
+</div>
+</section>
+<!-- Projects end -->
