--- a/_includes/references.html
+++ b/_includes/references.html
@@ -1,11 +1,40 @@
-<h2>References</h2>
+<!-- References Start -->
+<div class="references">
+<div class="container clearfix">
+<div class="row">
+
+<div class="col-sm-12 visible-sm">
+<h2><span class="fa fa-link"></span> Links</h2>
+</div>
+
+<div class="clearfix">
+<div class="col-lg-4 col-md-4 col-sm-12">
 <ul>
-<li><a target="_blank" href="http://debashisbarman.tumblr.com">Tumblr</a></li>
-<li><a target="_blank" href="https://medium.com/@iDeb">Blog on Medium</a></li>
-<li><a target="_blank" href="https://debashisbarman.wordpress.com">Blog on Wordpress</a></li>
-<li><a target="_blank" href="https://plus.google.com/+DebashisBarman">+DebashisBarman</a></li>
-<li><a target="_blank" href="https://www.facebook.com/debashisb04">Facebook</a></li>
-<li><a target="_blank" href="http://in.linkedin.com/pub/debashis-barman/66/a26/b67">LinkedIn</a></li>
-<li><a target="_blank" href="https://dbuniversity.academia.edu/DebashisBarman">Academia</a></li>
-<li><a target="_blank" href="https://www.skillpages.com/debashis.barman/1">Skillpages</a></li>
+<li><p><a target="_blank" href="http://debashisbarman.tumblr.com">Tumblr</a><span class="pull-right">+</span></p></li>
+<li><p><a target="_blank" href="https://medium.com/@Deb_Speaks">Blog on Medium</a><span class="pull-right">+</span></p></li>
+<li><p><a target="_blank" href="https://debashisbarman.wordpress.com">Blog on Wordpress</a><span class="pull-right">+</span></p></li>
 </ul>
+</div>
+
+<div class="col-lg-4 col-md-4 col-sm-12">
+<ul>
+<li><p><a target="_blank" href="https://plus.google.com/+DebashisBarman">Google Plus</a><span class="pull-right">+</span></p></li>
+<li><p><a target="_blank" href="http://in.linkedin.com/pub/debashis-barman/66/a26/b67">LinkedIn</a><span class="pull-right">+</span></p></li>
+<li><p><a target="_blank" href="https://dbuniversity.academia.edu/DebashisBarman">Academia</a><span class="pull-right">+</span></p></li>
+<li><p><a target="_blank" href="https://www.skillpages.com/debashis.barman/1">Skillpages</a><span class="pull-right">+</span></p></li>
+</ul>
+</div>
+
+<div class="col-lg-4 col-md-4 col-sm-12">
+<ul>
+<li><p><a target="_blank" href="https://gist.github.com/debashisbarman">My Gists</a><span class="pull-right">+</span></p></li>
+<li><p><a href="http://www.debashisbarman.in/about/">About the site</a><span class="pull-right">+</span></p></li>
+<li><p><a href="http://www.debashisbarman.in/assets/DebashisBarmanCurriculumVitae.pdf">Curriculum Vitae</a><span class="pull-right">+</span></p></li>
+</ul>
+</div>
+</div>
+
+</div>
+</div>
+</div>
+<!-- References end -->
