--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,30 +2,23 @@
 layout: default
 ---
 
-<header class="masthead">
-<div class="masthead-inner-wrapper">
-<div class="masthead-inner">
+<div class="post clearfix">
 
-{% include sidebar.html %}
-
-</div>
-</div>
-</header>
-
-<div class="content container clearfix">
-<div class="row">
-<div class="col-lg-12 col-md-12 col-sm-12">
-
-<h2 class="title"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></h2>
-
+<div class="container clearfix">
+<div class="row clearfix">
+<div class="col-lg-9 col-md-9 col-sm-12 clearfix">
+<small class="breadcumb"><a href="{{ site.url }}">Home</a> &gt; {{ page.title }}</small>
+<h1 class="title">{{ page.title }}</h1>
 {{ content }}
+</div>
+</div>
+</div>
+</div>
 
-<br id="references">
+{% include share.html %}
+
+{% include articles.html %}
+
 {% include references.html %}
 
-<br id="other-pages">
-{% include other-pages.html %}
-
-</div>
-</div>
-</div>
+{% include footer.html %}
