--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,45 +2,24 @@
 layout: default
 ---
 
-<header class="masthead">
-<div class="masthead-inner-wrapper">
-<div class="masthead-inner">
+<div class="post clearfix">
 
-{% include sidebar.html %}
-
-</div>
-</div>
-</header>
-
-<div class="content container clearfix">
-<div class="row">
-<div class="col-lg-12 col-md-12 col-sm-12">
-
-<h2 class="title"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></h2>
-<p class="lead"><em>{{ page.date | date_to_string }}</em></p>
-
+<div class="container clearfix">
+<div class="row clearfix">
+<div class="col-lg-9 col-md-9 col-sm-12 clearfix">
+<small class="breadcumb"><a href="{{ site.url }}">Home</a> &gt; {{ page.title }}</small>
+<h1 class="title">{{ page.title }}</h1>
+<span class="subtitle">{{ page.date | date_to_string }}</span>
 {{ content }}
+</div>
+</div>
+</div>
+</div>
 
-<br id="comment-and-share">
-{% include comment-and-share.html %}
+{% include share.html %}
 
-<br id="related-articles">
-<h2>Related Articles</h2>
-<ul>
-{% for post in site.related_posts limit:3 %}
-<li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-{% endfor %}
-</ul>
+{% include articles.html %}
 
-<br id="references">
 {% include references.html %}
 
-<br id="other-pages">
-{% include other-pages.html %}
-
-<br id="disclaimer">
-{% include disclaimer.html %}
-
-</div>
-</div>
-</div>
+{% include footer.html %}
