--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 <ul class="li-inline">
 <li><span class="fa fa-cog"></span> Built on <a target="_blank" href="http://jekyllrb.com/">Jekyll</a> and hosted on <a target="_blank" href="http://pages.github.com/">Github Pages</a></li>
 <li><span class="fa fa-copyright"></span> 2015 Debashis Barman</li>
-<li><span class="fa fa-warning"></span> Site under construction</li>
+<li><span class="fa fa-spinner fa-spin"></span> Site under construction</li>
 </ul>
 </div>
 </div>
